--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     padding: 10px;
     align-items: center;
     justify-content: space-around;
+    border-bottom: 2px solid rgb(230, 239, 247);
 }
 
 .logo {
@@ -61,7 +62,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(header-img.JPG);
+    background-image: url(Pictures/header-img.JPG);
     background-size: cover;
     background-position: center;
     height: 100vh;
