--- a/plans.css
+++ b/plans.css
@@ -11,20 +11,20 @@ body {
 }
 
 .nav {
-    width: 100%;
-    height: 100px;
+    height: 5rem;
     background-color: black;
     display: flex;
     padding: 10px;
     align-items: center;
     justify-content: space-around;
     border-bottom: 2px solid rgb(230, 239, 247);
+    
 }
 
 .logo {
     color: rgb(230, 239, 247);
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 55px;
+    font-size: 3.5rem; /* Adjusted */
 }
 
 .nav-left {
@@ -37,20 +37,19 @@ body {
     align-items: center;
 }
 
-
-
 .list {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    padding-left: 50px;
+    padding-left: 3rem; /* Adjusted */
 }
 
 .list li a {
-    padding-left: 150px;
+    padding-left: 3rem; /* Adjusted */
     text-decoration: none;
     color: rgb(230, 239, 247);
-    font-size: 25px;
+    font-size: 2.5rem; /* Adjusted */
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 .card-container{
